# parallel-test

./: .gitignore  CMakeLists.txt  README.md
cmake/: AddGoogleTest.cmake
game-of-life/src/: CMakeLists.txt
game-of-life/src/main/cpp/: Buffer2d.cpp  Image.cpp  Stopwatch.cpp  TextFormat.cpp
game-of-life/src/main/h/gol/: Buffer2d.h  Image.h  Runtime.h  Stopwatch.h  TextFormat.h
game-of-life/src/test-support/cpp/: Buffer2dSamples.cpp  ImageSamples.cpp
game-of-life/src/test-support/h/test/: Buffer2dSamples.h  ImageSamples.h
game-of-life/src/test-support/h/test-support/: ImageSamples.h
game-of-life/src/test/cpp/: Buffer2dTest.cpp  ImageSamplesTest.cpp  ImageTest.cpp  TextFormatTest.cpp
parallel-cpu-openmp/src/: CMakeLists.txt
parallel-cpu-openmp/src/main/cpp/core/: OpenMpRuntime.cpp
parallel-cpu-openmp/src/main/h/cpu/: OpenMpRuntime.h
parallel-cpu-openmp/src/test/cpp/: OpenMpRuntimeTest.cpp
parallel-cpu-single/src/: CMakeLists.txt
parallel-cpu-single/src/main/cpp/core/: SingleThreadRuntime.cpp
parallel-cpu-single/src/main/h/cpu/: SingleThreadRuntime.h
parallel-cpu-single/src/test/cpp/: SingleThreadRuntimeTest.cpp
parallel-cuda/src/: CMakeLists.txt
parallel-cuda/src/main/cpp/: main.cpp
parallel-cuda/src/main/cpp/core/: CudaRuntime.cpp  CudaRuntime.cu
parallel-cuda/src/main/h/cuda/: CudaRuntime.h
parallel-cuda/src/test/cpp/: CudaRuntimeTest.cpp
parallel-opencl/src/: CMakeLists.txt
parallel-opencl/src/main/cl/: game-of-life.cl
parallel-opencl/src/main/cpp/: main.cpp
parallel-opencl/src/main/cpp/core/: OpenClRuntime.cpp
parallel-opencl/src/main/h/cl/: OpenClRuntime.h
parallel-opencl/src/test/cpp/: OpenClRuntimeTest.cpp  PlaceholderTest.cpp
src/main/: PlaceholderClass.cpp  PlaceholderClass.h
src/test/: PlaceholderTest.cpp
